--- a/app/views/navegation/_navbar.html.erb
+++ b/app/views/navegation/_navbar.html.erb
@@ -9,8 +9,8 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-music"></span> Inicio de Sesión<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li>
-              <li><a href="#">Agregar Derecho de Petición</a></li>
-              <li><a href="#">Consulta Derecho de Petición</a></li>
+              <li><a href="#">Editar</a></li>
+              <li><a href="#">Cerrar Sesión</a></li>
             </li>
           </ul>
         </li>
