--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,7 @@
-<h1>Bienvenido al Sistema de Gestion de la Alcaldia Municipal de Fusagasugá</h1>
+<%= render "navegation/miniencabezado"%>
+<center>
+	<div class="jumbotron" style=" width: 95%;">
+    	<h2>Sistema de Gestio Administrativa</h2>      
+    	<p>Bootstrap is the most popular HTML, CSS, and JS framework for developing responsive, mobile-first projects on the web.</p>
+  </div>
+</center>
