--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,17 @@
 
   <body>
   <%= render "navegation/navbar"%>
-  <div class="row">
-  	<div class="col-md-4 col-lg-2">
-  		<%= render "navegation/verticalnavbar"%>
-  	</div>
-  	<div class="col-md-8 col-lg-10">
-  		<%= yield %>
-  	</div>
-  	
-  </div>
+    <div class="row">
+  		<div class="col-md-4 col-lg-2">
+  			<%= render "navegation/verticalnavbar"%>
+  		</div>
+  		<div class="col-md-8 col-lg-10">
+
+  			<%= yield %>
+  			<p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+  		</div>
+	 </div>
   
 
     
