--- a/app/views/navegation/_navbar.html.erb
+++ b/app/views/navegation/_navbar.html.erb
@@ -5,15 +5,19 @@
     </div>
     <div class="dropdowns">
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Inicio de Sesión<b class="caret"></b></a>
-          <ul class="dropdown-menu">
-            <li>
-              <li><a href="#">Editar</a></li>
-              <li><a href="#">Cerrar Sesión</a></li>
+        <%if user_signed_in? %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-user"></span> Sesión Iniciada<b class="caret"></b></a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <li><%= link_to "Editar Información", edit_user_registration_path %></li>
+                    <li><%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %></li>
+                  </li>
+                </ul>
             </li>
-          </ul>
-        </li>
+            <% else %>
+              <li><%= link_to "Iniciar Sesión", new_user_session_path %></li>
+          <% end %>
       </ul>
     </div>
     
