--- a/app/views/navegation/_verticalnavbar.html.erb
+++ b/app/views/navegation/_verticalnavbar.html.erb
@@ -1,6 +1,11 @@
 <br>
-<ul class="nav nav-pills nav-stacked ">
-  <li class="active"><a href="#">Inicio</a></li>
+<ul class="nav nav-pills nav-stacked">
+  <% if controller_name == 'welcome' %>
+      <li class="active"><%= link_to "Inicio", root_path%></li>
+      <% else %>
+      <li><%= link_to "Inicio", root_path%></li>
+  <% end %>
+  
   <li>
   	<a data-toggle="collapse" href="#collapse1">Correspondencia y Oficios<b class="caret"></b></a>
             <div id="collapse1" class="panel-collapse collapse">
