--- a/app/assets/stylesheets/misestilis.scss
+++ b/app/assets/stylesheets/misestilis.scss
@@ -1,18 +1,3 @@
-@media (min-width: 768px) {
-  .sidebar-nav .navbar .navbar-collapse {
-    padding: 0;
-    max-height: none;
-  }
-  .sidebar-nav .navbar ul {
-    float: none;
-    display: block;
-  }
-  .sidebar-nav .navbar li {
-    float: none;
-    display: block;
-  }
-  .sidebar-nav .navbar li a {
-    padding-top: 12px;
-    padding-bottom: 12px;
-  }
+#tamañodiv{
+  width: 99%;
 }
