Se arreglo bug ingreso de datos
Se ha arreglado un bug en donde no se podía registrar mas datos que los
que venían preestablecidos en devise.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -14,7 +14,7 @@
       <div class="panel-body">
         <div class="input-group">
           <span class="input-group-addon" id="basic-addon1">Nombre y Apellidos</span>
-          <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+          <%= f.email_field :name, class: 'form-control', placeholder: "Nombre y Apellidos"%>
         </div>
         <br>
         <div class="input-group">
