--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,7 +19,7 @@
         <br>
         <div class="input-group">
           <span class="input-group-addon" id="basic-addon1">Correo Electronico</span>
-          <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+          <%= f.email_field :email, class: 'form-control', placeholder: "Nombre y Apellidos"%>
         </div>
       </div>
     </div>
